examples/type-errors/app/route.def.ts
import { defineAppRoute } from "paramour";

export const homeRoute = defineAppRoute("/", {});
